--- a/src/assets/css/index.less
+++ b/src/assets/css/index.less
@@ -1,3 +1,6 @@
 @import 'antd/dist/reset.css';
 @import './reset.less';
 @import './common.less';
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
